post-updated, 404 page added

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -17,7 +17,7 @@ $black:#000000;
 $dark:#152035;
 $gray:#5e6675;
 $light:#FAFAFA;
-$color-primary:#FF3F3E;
+$color-primary:#01AD9F;
 
 $black-100:#111111;
 $black-200:#222222;
