--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,8 +1,14 @@
 {{ define "main" }}
 
-<section id="main">
-  <div>
-   <h1 id="title">{{ .Title }}</h1>
+<section class="section-sm">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="text-center">
+          <h2>{{ .Title }}</h2>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
 
