--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -26,6 +26,19 @@ mark {
 }
 
 /*------------------------------------------------------------------
+ # preloader
+-------------------------------------------------------------------*/
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: $white;
+  z-index: 9999;
+  height: 100%;
+  width: 100%;
+}
+
+/*------------------------------------------------------------------
  # default styles
 -------------------------------------------------------------------*/
 .section {
