--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,41 +1,37 @@
-<!DOCTYPE html>
-<html lang="{{ site.LanguageCode | default `en-US` }}">
-  {{- partial "head.html" . -}}
-<body>
-  {{- partial "header.html" . -}}
+{{ define "main"}}
 
 <section class="section-sm">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-10">
         <div class="text-center">
-            <h3 class="h2 mb-4 post-title">{{.Title}}</h3>
-            <ul class="card-meta list-inline">
-              <li class="list-inline-item">
-                <a href="#!" class="card-meta-author">
-                  {{ with .Site.GetPage (.Params.author | urlize | lower) }}
-                  <a href="{{.Permalink}}" class="card-meta-author">
-                    <img loading="lazy" src="{{.Params.image | absURL}}" alt="{{ .Title }}">
-                    <span>{{.Title}}</span>
-                  </a>
-                  {{ end }}
+          <h3 class="h2 mb-4 post-title">{{.Title}}</h3>
+          <ul class="card-meta list-inline">
+            <li class="list-inline-item">
+              <a href="#!" class="card-meta-author">
+                {{ with .Site.GetPage (.Params.author | urlize | lower) }}
+                <a href="{{.Permalink}}" class="card-meta-author">
+                  <img loading="lazy" src="{{.Params.image | absURL}}" alt="{{ .Title }}">
+                  <span>{{.Title}}</span>
                 </a>
-              </li>
-              <li class="list-inline-item">
-                <ul class="card-meta-tag list-inline">
-                  {{range .Params.tags}}
-                  <li class="list-inline-item"><a href="/tags/{{.| urlize}}">{{.}}</a></li>
-                  {{end}}
-                </ul>
-              </li>
-              <li class="list-inline-item">
-                <span>{{.PublishDate.Format "02 January 2006"}}</span>
-              </li>
-            </ul>
+                {{ end }}
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <ul class="card-meta-tag list-inline">
+                {{range .Params.tags}}
+                <li class="list-inline-item"><a href="/tags/{{.| urlize}}">{{.}}</a></li>
+                {{end}}
+              </ul>
+            </li>
+            <li class="list-inline-item">
+              <span>{{.PublishDate.Format "02 January 2006"}}</span>
+            </li>
+          </ul>
         </div>
 
         <div class="my-5 text-center">
-            <img loading="lazy" class="img-fluid" src="{{.Params.image | absURL}}" alt="{{.Title}}">
+          <img loading="lazy" class="img-fluid" src="{{.Params.image | absURL}}" alt="{{.Title}}">
         </div>
 
         <div class="content">
@@ -45,67 +41,66 @@
     </div>
 
     <div class="single-post-meta">
-        <div class="row justify-content-center">
-          <div class="col-lg-5 col-md-6 text-center text-md-left">
-            <ul class="post-meta-tags list-unstyled list-inline">
-              {{range .Params.tags}}
-              <li class="list-inline-item"><a href="/tags/{{.| urlize}}">{{.}}</a></li>
-              {{end}}
-            </ul>
-          </div>
-          <div class="col-lg-5 col-md-6 text-center text-md-right mt-4 mt-md-0">
-
-            {{- partial "post-share.html" . -}}
-          </div>
+      <div class="row justify-content-center">
+        <div class="col-lg-5 col-md-6 text-center text-md-left">
+          <ul class="post-meta-tags list-unstyled list-inline">
+            {{range .Params.tags}}
+            <li class="list-inline-item"><a href="/tags/{{.| urlize}}">{{.}}</a></li>
+            {{end}}
+          </ul>
         </div>
+        <div class="col-lg-5 col-md-6 text-center text-md-right mt-4 mt-md-0">
+
+          {{- partial "post-share.html" . -}}
+        </div>
+      </div>
     </div>
 
     <div class="single-post-similer">
-        <div class="row justify-content-center">
-          <div class="col-lg-10">
-              <h2 class="font-weight-600 text-dark">You May Also Like</h2>
+      <div class="row justify-content-center">
+        <div class="col-lg-10">
+          <h2 class="font-weight-600 text-dark">You May Also Like</h2>
 
-              <div class="row mt-4">
-                {{ $related := .Site.RegularPages.Related . | last 2 }}
-                {{ with $related }}
-                  {{ range . }}
-                  <div class="col-md-6">
-                    {{.Render "post"}}
-                  </div>
-                  {{ end }}
-                {{ end }}
-              </div>
+          <div class="row mt-4">
+            {{ $related := .Site.RegularPages.Related . | last 2 }}
+            {{ with $related }}
+            {{ range . }}
+            <div class="col-md-6">
+              {{.Render "post"}}
+            </div>
+            {{ end }}
+            {{ end }}
           </div>
         </div>
+      </div>
     </div>
 
     <div class="single-post-author">
-        <div class="row justify-content-center">
-          <div class="col-lg-10">
-              <div class="media d-block d-sm-flex text-center text-sm-left">
+      <div class="row justify-content-center">
+        <div class="col-lg-10">
+          <div class="media d-block d-sm-flex text-center text-sm-left">
 
-                {{ with .Site.GetPage (.Params.Author | urlize | lower) }}
-                <a href="{{.Permalink}}"><img loading="lazy" class="img-fluid rounded-circle mr-0 mr-sm-4 mb-4" src="{{.Params.image | absURL}}" alt="{{ .Title }}"></a>
-                <div class="media-body">
-                  <p class="font-primary">Written By</p>
-                  <h4><a href="{{.Permalink}}" class="text-dark font-weight-600">{{.Title}}</a></h4>
-                  <p class="font-primary">{{ .Summary | truncate 250 }}</p>
-                  <ul class="social-links list-unstyled list-inline ml-0 ml-sm-n2">
-                    {{ range .Params.social }}
-                    <li class="list-inline-item"><a href="{{.link | safeURL}}">
-                      <i class="lab {{.icon}}"></i>
-                    </a></li>
-                    {{end}}
-                  </ul>
-                </div>
-                {{ end }}
-              </div>
+            {{ with .Site.GetPage (.Params.Author | urlize | lower) }}
+            <a href="{{.Permalink}}"><img loading="lazy" class="img-fluid rounded-circle mr-0 mr-sm-4 mb-4"
+                src="{{.Params.image | absURL}}" alt="{{ .Title }}"></a>
+            <div class="media-body">
+              <p class="font-primary">Written By</p>
+              <h4><a href="{{.Permalink}}" class="text-dark font-weight-600">{{.Title}}</a></h4>
+              <p class="font-primary">{{ .Summary | truncate 250 }}</p>
+              <ul class="social-links list-unstyled list-inline ml-0 ml-sm-n2">
+                {{ range .Params.social }}
+                <li class="list-inline-item"><a href="{{.link | safeURL}}">
+                    <i class="lab {{.icon}}"></i>
+                  </a></li>
+                {{end}}
+              </ul>
+            </div>
+            {{ end }}
           </div>
         </div>
+      </div>
     </div>
   </div>
 </section>
 
-  {{- partial "footer.html" . -}}
-</body>
-</html>
+{{ end }}
