--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -4,8 +4,8 @@
   <div class="container">
     <div class="row justify-content-center text-center">
       {{ range .Site.Taxonomies.tags }}
-      <div class="col-lg-3">
-        <a class="h4 px-4 py-3 rounded-pill bg-light" href="{{ .Page.Permalink }}"><i class="las la-tags mr-1"></i> {{ .Page.Title }} ({{ .Count }})</a>
+      <div class="col-lg-2 mb-4">
+        <a class="h5 px-4 py-3 rounded-pill bg-light d-block" href="{{ .Page.Permalink }}"><i class="las la-tags mr-1"></i> {{ .Page.Title }} ({{ .Count }})</a>
       </div>
       {{ end }}
     </div>
