--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,9 +1,8 @@
-$font-primary: 'Lora', serif;
-$font-secondary: 'Barlow', sans-serif;
+$font-primary: 'Mulish', sans-serif;
 
-$h1: 68px;
+$h1: 64px;
 $h1-lg: 52px;
-$h1-md: 40px;
+$h1-md: 42px;
 $h2: 38px;
 $h2-md: 30px;
 $h3: 30px;
