--- a/layouts/_default/contact.html
+++ b/layouts/_default/contact.html
@@ -22,7 +22,7 @@
             <textarea class="form-control bg-light" id="message" rows="4" placeholder="Your Message" required></textarea>
           </div>
 
-          <button type="submit" class="btn btn-primary rounded-sm" aria-label="Send Message">Send Message</button>
+          <button type="submit" class="btn btn-primary rounded mt-3" aria-label="Send Message">Send Message</button>
         </form>
       </div>
     </div>
