--- a/layouts/_default/about.html
+++ b/layouts/_default/about.html
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="row justify-content-center text-center">
       <div class="col-12">
-        <img loading="lazy" class="img-fluid rounded-lg" src="{{.Params.image | relURL}}" alt="{{.Title}}">
+        <img loading="lazy" class="img-fluid rounded" src="{{.Params.image | relURL}}" alt="{{.Title}}">
       </div>
       <div class="col-lg-8">
         <div class="content">
