--- a/layouts/author/single.html
+++ b/layouts/author/single.html
@@ -4,8 +4,15 @@
   <div class="container">
     <div class="row justify-content-center text-center">
       <div class="col-12 mb-4">
-        <img loading="lazy" class="img-fluid rounded-circle mb-3" src="{{.Params.image | absURL}}" alt="{{.Title}}">
-        <h3 class="text-dark mb-2">{{.Title}}</h3>
+        <img loading="lazy" class="img-fluid rounded mb-5" src="{{.Params.image | absURL}}" alt="{{.Title}}">
+        <h3 class="text-dark font-weight-700 mb-2">{{.Title}}</h3>
+        <ul class="social-links list-unstyled list-inline ml-0 ml-sm-n2">
+          {{ range .Params.social }}
+          <li class="list-inline-item"><a href="{{.link | safeURL}}">
+              <i class="lab {{.icon}}"></i>
+            </a></li>
+          {{end}}
+        </ul>
       </div>
       <div class="col-lg-8">
         <div class="content">
