--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<section class="py-5">
+<section class="pt-5 pb-4">
   <div class="container">
     <div class="row">
       <div class="col-12 text-center">
