--- a/assets/scss/templates/_navigation.scss
+++ b/assets/scss/templates/_navigation.scss
@@ -47,16 +47,20 @@ header {
 
     &.dropdown .nav-link::before {
       position: absolute;
+      right: -2px;
+      top: calc(50% - 7px);
+      display: inline-block;
+      vertical-align: .255em;
       content: "";
-      height: 6px;
+      height: 9px;
       width: 9px;
-      top: calc(50% - 3px);
-      right: 9px;
-      transition: .3s;
-
-      @include desktop {
-        right: 27px;
-      }
+      border: 2px solid;
+      border-left: 0;
+      border-top: 0;
+      border-color: inherit;
+      border-radius: 2px;
+      transform: rotate(45deg);
+      transition: 0s;
     }
 
     .nav-link {
