--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -6,15 +6,15 @@ $h1-md: 42px;
 $h2: 38px;
 $h2-md: 30px;
 $h3: 30px;
-$h3-md: 22px;
-$h4: 20px;
+$h3-md: 24px;
+$h4: 24px;
 $h5: 18px;
 $h6: 16px;
 
 $white:#ffffff;
 $black:#000000;
 $dark:#152035;
-$gray:#5e6675;
+$gray:#80848d;
 $light:#FAFAFA;
 $color-primary:#01AD9F;
 
