--- a/layouts/_default/contact.html
+++ b/layouts/_default/contact.html
@@ -7,22 +7,22 @@
         <form action="{{site.Params.contact_form_action}}">
           <div class="mb-4">
             <label for="name" class="form-label">Your Name</label>
-            <input type="email" class="form-control bg-light" id="name" placeholder="Alex Smith" required>
+            <input type="email" class="form-control rounded" id="name" placeholder="Alex Smith" required>
           </div>
           <div class="mb-4">
             <label for="email" class="form-label">Email Address</label>
-            <input type="email" class="form-control bg-light" id="email" placeholder="hello@bookworm.com" required>
+            <input type="email" class="form-control rounded" id="email" placeholder="hello@bookworm.com" required>
           </div>
           <div class="mb-4">
             <label for="subject" class="form-label">Subject</label>
-            <input type="email" class="form-control bg-light" id="subject" placeholder="Reasons for Contact" required>
+            <input type="email" class="form-control rounded" id="subject" placeholder="Reasons for Contact" required>
           </div>
           <div class="mb-4">
             <label for="message" class="form-label">Your Message Here</label>
-            <textarea class="form-control bg-light" id="message" rows="4" placeholder="Your Message" required></textarea>
+            <textarea class="form-control rounded" id="message" rows="4" placeholder="Your Message" required></textarea>
           </div>
 
-          <button type="submit" class="btn btn-primary rounded mt-3" aria-label="Send Message">Send Message</button>
+          <button type="submit" class="btn btn-primary rounded" aria-label="Send Message">Send Message</button>
         </form>
       </div>
     </div>
