--- a/layouts/index.html
+++ b/layouts/index.html
@@ -100,9 +100,9 @@
                   <div class="col-lg-6 mt-4 mt-lg-0">
                     <form action="{{ .mailchimp_form_action }}" method="post" name="mailchimp_form_name" target="_blank">
                       <div class="input-group">
-                        <input form="subscription" type="text" class="form-control px-0" placeholder="{{ .input_placeholder }}" aria-label="Subscription" required>
+                        <input form="subscription" type="text" class="form-control" placeholder="{{ .input_placeholder }}" aria-label="Subscription" required>
                         <div class="input-group-append">
-                          <button type="submit" name="subscription" class="input-group-text" aria-label="Subscription Button"><i class="icon lar la-envelope-open"></i></button>
+                          <button type="submit" name="subscription" class="input-group-text" aria-label="Subscription Button"><i class="icon las la-paper-plane"></i></button>
                         </div>
                       </div>
                       <div style="position: absolute; left: -5000px;" aria-hidden="true">
