--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -28,6 +28,9 @@ h5, .h5 {
 h6, .h6 {
    font-size: $h6;
 }
+h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
+   line-height: 1.3;
+}
 a:focus,
 button:focus {
 	outline: 0;
