--- a/assets/scss/templates/_main.scss
+++ b/assets/scss/templates/_main.scss
@@ -1,74 +1,91 @@
-
 // newsletter-block
 .newsletter-block {
-   background-color: $dark;
-   color: $white;
-   padding: 80px 60px;
-   @include tablet {
-      padding: 80px 30px;
-   }
-   .input-group-text,
-   .form-control {
-      background-color: transparent;
+  background-color: $dark;
+  color: $white;
+  padding: 80px 60px;
+
+  @include tablet {
+    padding: 80px 30px;
+  }
+
+  .input-group-text,
+  .form-control {
+    background-color: transparent;
+    color: $white;
+    border-color: #999;
+  }
+
+  .input-group-text {
+    padding: .375rem 1rem;
+  }
+
+  .form-control {
+    &:focus {
+      border-color: $color-primary;
+
+      ~.input-group-append {
+        .input-group-text {
+          border-color: $color-primary;
+          background-color: $color-primary;
+          color: $white;
+        }
+      }
+    }
+  }
+
+  ::-webkit-input-placeholder {
+    color: rgba($white, .7);
+  }
+
+  :-ms-input-placeholder {
+    color: rgba($white, .7);
+  }
+
+  ::placeholder {
+    color: rgba($white, .7);
+  }
+
+  button.input-group-text {
+    color: rgba($white, .7);
+
+    &:hover {
       color: $white;
-      border-color: #999;
-   }
-   .form-control {
-      &:focus {
-         border-bottom-color: $white;
-         ~ .input-group-append {
-            .input-group-text {
-               border-bottom-color: $white;
-            }
-         }
-      }
-   }
-   ::-webkit-input-placeholder {
-      color: rgba($white, .7);
-   }
-   :-ms-input-placeholder {
-      color: rgba($white, .7);
-   }
-   ::placeholder {
-      color: rgba($white, .7);
-   }
-   button.input-group-text {
-      color: rgba($white, .7);
-      &:hover {
-         color: $white;
-      }
-   }
+    }
+  }
 }
 
 
 // instagram-feed
 .instagram_feed {
-   .instagram-post:hover {
-      opacity: .8;
-   }
+  .instagram-post:hover {
+    opacity: .8;
+  }
 }
 
 
 // blog post
 .single-post-meta,
 .single-post-similer {
-   margin-top: 70px;
+  margin-top: 70px;
 }
+
 .single-post-author {
-   margin-top: 50px;
+  margin-top: 50px;
 }
+
 .post-meta-tags {
-   a {
-      display: inline-block;
-      background-color: #f7f8fa;
-      color: $dark;
-      padding: 6px 13px;
-      font-weight: 700;
-      font-size: 15px;
-      @extend .rounded;
-      &:hover {
-         background-color: transparent;
-         color: $color-primary;
-      }
-   }
+  a {
+    display: inline-block;
+    background-color: #f7f8fa;
+    color: $dark;
+    padding: 6px 13px;
+    font-weight: 700;
+    font-size: 15px;
+    @extend .rounded;
+
+    &:hover {
+      background-color: transparent;
+      color: $color-primary;
+    }
+  }
 }
