--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,7 +4,7 @@
 <body>
   {{- partial "preloader.html" . -}}
   {{- partial "header.html" . -}}
-  {{if and (not .IsHome) (ne .Section "blog") (ne .Section "404") (ne .Permalink (`search/` | absURL)) }}
+  {{if and (not .IsHome) (ne .Section "blog") (ne .Permalink (`about/` | absURL)) (ne .Permalink (`search/` | absURL)) }}
   {{- partial "page-header.html" . -}}
   {{end}}
   {{- block "main" . }}{{- end }}
