--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -3,11 +3,24 @@
 <section class="section-sm">
   <div class="container">
     <div class="row justify-content-center text-center">
-      {{ range .Site.Taxonomies.tags }}
-      <div class="col-lg-2 mb-4">
-        <a class="h5 px-4 py-3 rounded bg-light d-block font-weight-700" href="{{ .Page.Permalink }}"><i class="las la-tags mr-1"></i> {{ .Page.Title }} ({{ .Count }})</a>
+      <div class="col-12">
+        <ul class="list-inline taxonomies-list">
+        {{ if eq .Permalink (`tags/` | absURL)}}
+        {{ range .Site.Taxonomies.tags }}
+        <li class="list-inline-item mb-1">
+          <a class="h5 px-4 py-3 rounded bg-light d-block font-weight-700" href="{{ .Page.Permalink }}"><i class="las la-tags mr-1"></i> {{ .Page.Title }} ({{ .Count }})</a>
+        </li>
+        {{ end }}
+        {{ end }}
+        {{ if eq .Permalink (`categories/` | absURL)}}
+        {{ range .Site.Taxonomies.categories }}
+        <li class="list-inline-item mb-1">
+          <a class="h5 px-4 py-3 rounded bg-light d-block font-weight-700" href="{{ .Page.Permalink }}"><i class="las la-tags mr-1"></i> {{ .Page.Title }} ({{ .Count }})</a>
+        </li>
+        {{ end }}
+        {{ end }}
+        </ul>
       </div>
-      {{ end }}
     </div>
   </div>
 </section>
