--- a/layouts/author/list.html
+++ b/layouts/author/list.html
@@ -3,12 +3,27 @@
 <section class="section-sm">
   <div class="container">
     <div class="row justify-content-center text-center">
-      {{range .RegularPages}}
-      <div class="col-lg-3 col-md-4 col-6 mb-4">
+      {{range .RegularPages }}
+      <div class="col-lg-4 col-sm-6 mb-4">
+        {{ if .Params.image }}
         <a class="d-inline-block" href="{{.Permalink}}">
           <img loading="lazy" class="img-fluid rounded" src="{{.Params.image | absURL}}" alt="{{.Title}}">
-          <h4 class="mt-3">{{.Title}}</h4>
+          <h4 class="font-weight-700 text-dark mt-4 mb-3">{{.Title}}</h4>
         </a>
+        {{ else }}
+        <a class="d-inline-block" href="{{.Permalink}}">
+          <img loading="lazy" class="img-fluid rounded" src="https://www.gravatar.com/avatar/{{ md5 .Params.email }}?s=150&pg&d=identicon">
+          <h4 class="font-weight-700 text-dark mt-4 mb-3">{{.Title}}</h4>
+        </a>
+        {{ end }}
+        <ul class="social-links list-unstyled list-inline ml-0 ml-sm-n2 mb-2">
+          {{ range .Params.social }}
+          <li class="list-inline-item"><a href="{{.link | safeURL}}">
+              <i class="lab {{.icon}}"></i>
+            </a></li>
+          {{end}}
+        </ul>
+        <p>{{- .Summary | truncate 100 -}} &nbsp; <a class="text-dark" href="{{.Permalink}}">Read More</a></p>
       </div>
       {{end}}
     </div>
