--- a/layouts/author/single.html
+++ b/layouts/author/single.html
@@ -4,7 +4,11 @@
   <div class="container">
     <div class="row justify-content-center text-center">
       <div class="col-12 mb-4">
+        {{if .Params.image}}
         <img loading="lazy" class="img-fluid rounded mb-5" src="{{.Params.image | absURL}}" alt="{{.Title}}">
+        {{else}}
+        <img loading="lazy" class="img-fluid rounded mb-5" src="https://www.gravatar.com/avatar/{{ md5 .Params.email }}?s=150&pg&d=identicon">
+        {{end}}
         <h3 class="text-dark font-weight-700 mb-2">{{.Title}}</h3>
         <ul class="social-links list-unstyled list-inline ml-0 ml-sm-n2">
           {{ range .Params.social }}
@@ -22,5 +26,15 @@
     </div>
   </div>
 </section>
+
+<div class="container">
+  <div class="row">
+    {{ range where site.RegularPages "Params.author" .Title }}
+    <div class="col-lg-6">
+      {{.Render "post"}}
+    </div>
+    {{ end }}
+  </div>
+</div>
 
 {{end}}
