--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -1,5 +1,5 @@
 {{ range site.Params.plugins.css }}
-<link rel="stylesheet" href="{{ .src | absURL }}" {{.attributes | safeHTMLAttr}}>
+<link rel="stylesheet" href="{{ .link | absURL }}" {{.attributes | safeHTMLAttr}}>
 {{ end }}
 
 <!-- Main Stylesheet -->
