--- a/layouts/_default/about.html
+++ b/layouts/_default/about.html
@@ -5,7 +5,7 @@
     <div class="row justify-content-center">
 
       {{ with .Params.image }}
-      <div class="col-12 mb-5">
+      <div class="col-lg-10 mb-5">
         <img loading="lazy" class="img-fluid rounded" src="{{. | relURL}}" alt="">
       </div>
       {{ end }}
