--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,31 +1,46 @@
-<section class="pt-5 pb-4">
+<footer class="section-sm">
   <div class="container">
-    <div class="row">
-      <div class="col-12 text-center">
-        <ul class="social-links list-unstyled list-inline font-weight-500">
+    <div class="row justify-content-center align-items-center">
+      <div class="col-lg-5">
+        {{ with site.Params.subscription }}
+        {{ if .enable }}
+        <div class="newsletter-block font-primary">
+          <h4 class="mb-4 font-weight-700 text-center">{{ .title | markdownify }}</h4>
+          <form class="px-0 px-sm-3 px-md-5" action="{{ .mailchimp_form_action }}" method="post" name="mailchimp_form_name" target="_blank">
+            <div class="input-group">
+              <input form="subscription" type="text" class="form-control" placeholder="{{ .input_placeholder }}" aria-label="Subscription" required autocomplete="new-email">
+              <div class="input-group-append">
+                <button type="submit" name="subscription" class="input-group-text" aria-label="Subscription Button"><i class="icon las la-paper-plane"></i></button>
+              </div>
+            </div>
+            <div style="position: absolute; left: -5000px;" aria-hidden="true">
+              <input type="text" name="{{ .mailchimp_form_name }}" tabindex="-1">
+            </div>
+          </form>
+        </div>
+        {{ end }}
+        {{ end }}
+      </div>
+      <div class="col-lg-12 text-center mt-5">
+        <ul class="list-inline footer-menu mb-4">
+          {{ range site.Menus.footer }}
+          <li class="list-inline-item mx-3"><a href="{{.URL | absURL}}">{{.Name}}</a></li>
+          {{ end }}
+        </ul>
+        <ul class="social-links icon-box list-unstyled list-inline font-weight-500 mb-3">
           {{range site.Params.social}}
-          <li class="list-inline-item"><a href="{{.url}}">
-            <i class="lab {{.icon}}"></i> {{.name}}
+          <li class="list-inline-item text-center"><a href="{{.url}}" aria-label="social-icon">
+            <i class="lab {{.icon}}"></i>
           </a></li>
           {{end}}
         </ul>
-      </div>
-    </div>
-  </div>
-</section>
-
-{{ with site.Params.copyright }}
-<footer class="pb-5">
-  <div class="container">
-    <div class="row">
-      <div class="col-12 text-center">
-        <p class="mb-0 font-weight-500">{{.info}} <a href="{{.author_url}}" class="text-dark">{{.author}}</a></p>
+        {{ with site.Params.footer }}
+        <p class="mb-0 font-weight-500">{{.info}} <a href="{{.author_url}}" class="text-gray">{{.author}}</a></p>
+        {{ end }}
       </div>
     </div>
   </div>
 </footer>
-{{ end }}
-
 
 {{ partialCached "script.html" . }}
 
