scss variable moved to config

--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -40,7 +40,7 @@ a {
    transition: all .3s;
    &:hover {
       text-decoration: none;
-      color: $black-200;
+      color: $color-primary;
    }
 }
 ul, li {
